# MESA

./: .gitignore  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml
.ipynb_checkpoints/: pyproject-checkpoint.toml
docs/: api.rst  conf.py  index.rst  installation.rst  requirements.txt  tutorials.rst  unit_test.rst
docs/.ipynb_checkpoints/: conf-checkpoint.py  index-checkpoint.rst  installation-checkpoint.rst  modules-checkpoint.rst
docs/_build/doctrees/: api.doctree  environment.pickle  index.doctree  installation.doctree  tutorials.doctree  unit_test.doctree
docs/_build/html/: .buildinfo  api.html  genindex.html  index.html  installation.html  objects.inv  py-modindex.html  search.html  searchindex.js  tutorials.html  unit_test.html
docs/api/: mesa.ecospatial.calculate_MDI.rst  mesa.ecospatial.global_spatial_stats.rst  mesa.ecospatial.local_moran.rst  mesa.multiomics.multiomics_spatial.get_avg_expression_neighbors.rst  mesa.multiomics.multiomics_spatial.get_global_neighborhood_composition.rst  mesa.multiomics.multiomics_spatial.get_neighborhood_composition.rst  mesa.multiomics.multiomics_spatial.get_spatial_knn_indices.rst
docs/notebooks/tutorials/: MESA_Tutorials.ipynb  MESA_in_R.rst  MESA_test.R  MESA_tutorial_ecospatial_liver.ipynb  MESA_tutorial_ecospatial_murine.ipynb  MESA_tutorial_multiomics.ipynb
mesa/: __init__.py  __initi__.py
mesa/.ipynb_checkpoints/: __initi__-checkpoint.py
mesa/archive/others/: additional_liver.ipynb  (+3 more)
mesa/ecospatial/: __init__.py  __initi__.py  _ecospatial.py  _pl.py  _utils.py
mesa/multiomics/: __init__.py
(+119 files in other folders)
