[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mesa-py"
version = "0.0.3"
authors = [
  { name="Daisy Yi Ding", email="dingd@stanford.edu " },
  { name="Zeyu Tang", email="feanortang@gmail.com" },
  { name="Bokai Zhu", email="bkzhu@stanford.edu" },
]
description = "Multiomics and Ecological Spatial Analysis for Quantitative Decoding of Cellular Neighborhoods and Tissue Compartments"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "anndata",
    "numpy",
    "pandas",
    "scipy",
    "pysal",
    "seaborn",
    "matplotlib",
    "networkx",
]

[project.optional-dependencies]
docs = [
    "sphinx>=5.3",
    "sphinx_rtd_theme",
]

[project.urls]
Homepage = "https://github.com/feanor007/mesa"
Issues = "https://github.com/feanor007/mesa/issues"

[tool.hatch.build.targets.wheel]
packages = ["mesa"] 